--- a/_posts/2019-08-07-Pwnable-01-fd.md
+++ b/_posts/2019-08-07-Pwnable-01-fd.md
@@ -1,3 +1,11 @@
+layout: post
+title: Pwnable-01-fd
+description: >
+  Pwnable第一题
+tags: [技术]
+author: author2
+#canonical_url: https://pwnable.kr/index.php
+---
 源代码：
   #include <stdio.h>
   #include <stdlib.h>
