--- a/_posts/2019-08-07-Pwnable-01-fd.md
+++ b/_posts/2019-08-07-Pwnable-01-fd.md
@@ -1,3 +1,4 @@
+---
 layout: post
 title: Pwnable-01-fd
 description: >
@@ -6,7 +7,11 @@ tags: [技术]
 author: author2
 #canonical_url: https://pwnable.kr/index.php
 ---
+# Header 1
+  这是pwnable的第一题fd
+
 源代码：
+```c++
   #include <stdio.h>
   #include <stdlib.h>
   #include <string.h>
@@ -29,6 +34,7 @@ author: author2
   	return 0;
 
   }
+```
 
 解题思路：
 /*
