--- a/_posts/2019-08-07-Pwnable-01-fd.md
+++ b/_posts/2019-08-07-Pwnable-01-fd.md
@@ -2,15 +2,17 @@
 layout: post
 title: Pwnable-01-fd
 description: >
-  Pwnable第一题
+  这是pwnable的第一题fd的解析过程
 tags: [技术]
 author: author2
-#canonical_url: https://pwnable.kr/index.php
+canonical_url: https://pwnable.kr/index.php
 ---
 # Header 1
   这是pwnable的第一题fd
 
+##header2
 源代码：
+
 ```c++
   #include <stdio.h>
   #include <stdlib.h>
@@ -35,29 +37,31 @@ author: author2
 
   }
 ```
+##header2
+  解题思路：
 
-解题思路：
-/*
-目标：执行system(“/bin/cat flag”);
-则：strcmp(“LETMEWIN\n”, buf) == 0
-则：buf = “LETMEWIN\n”
-则：read(fd, buf, 32)将buf设为”LETMEWIN\n”
-fd == 0为标准输入
-fd == 1为标准输出
-fd == 2为标准错误输出
-所以我们可以使fd == 0，然后从终端输入LETMEWIN后回车
-要使fd == 0，
-则：输入的参数 == 0x1234，即4660
+```
+  目标：执行system(“/bin/cat flag”);
+  则：strcmp(“LETMEWIN\n”, buf) == 0
+  则：buf = “LETMEWIN\n”
+  则：read(fd, buf, 32)将buf设为”LETMEWIN\n”
+  fd == 0为标准输入
+  fd == 1为标准输出
+  fd == 2为标准错误输出
+  所以我们可以使fd == 0，然后从终端输入LETMEWIN后回车
+  要使fd == 0，
+  则：输入的参数 == 0x1234，即4660
 
-从文件描述符fd所指向的文件中读取count个字节的数据到buf所指向的缓存中。
-文件描述符是由无符号整数表示的句柄，进程使用它来标识打开的文件。
-文件描述符0代表标准文件。
-fd == 0为标准输入
-fd == 1为标准输出
-fd == 2为标准错误输出
- */
-
+  从文件描述符fd所指向的文件中读取count个字节的数据到buf所指向的缓存中。
+  文件描述符是由无符号整数表示的句柄，进程使用它来标识打开的文件。
+  文件描述符0代表标准文件。
+  fd == 0为标准输入
+  fd == 1为标准输出
+  fd == 2为标准错误输出
+```
+###header3
 解答：
+
 先输入0x1234的十进制即4660，然后再输入LETMEWIN
 ./fd 4660
 LETMEWIN
