--- a/_posts/2019-08-07-Pwnable-01-fd.md
+++ b/_posts/2019-08-07-Pwnable-01-fd.md
@@ -7,11 +7,9 @@ tags: [技术]
 author: author1
 canonical_url: https://pwnable.kr/index.php
 ---
-# Header 1
-  这是pwnable的第一题fd
-
-##header2
-源代码：
+# pwnable的第一题fd
+  ['pwnable.kr'](https://pwnable.kr/index.php)is a non-commercial wargame site which provides various pwn challenges regarding system exploitation. the main purpose of pwnable.kr is 'fun'.    please consider each of the challenges as a game. while playing pwnable.kr, you could learn/improve system hacking skills but that shouldn't be your only purpose.
+## 源代码：
 
 ```c++
   #include <stdio.h>
@@ -37,8 +35,7 @@ canonical_url: https://pwnable.kr/index.php
 
   }
 ```
-##header2
-  解题思路：
+## 解题思路
 
 ```
   目标：执行system(“/bin/cat flag”);
@@ -59,8 +56,7 @@ canonical_url: https://pwnable.kr/index.php
   fd == 1为标准输出
   fd == 2为标准错误输出
 ```
-###header3
-解答：
+### 解答：
 
 先输入0x1234的十进制即4660，然后再输入LETMEWIN
 ./fd 4660
