--- a/_posts/2019-08-14-Windows提权大杀器.md
+++ b/_posts/2019-08-14-Windows提权大杀器.md
@@ -13,3 +13,6 @@ accent_color:          '#4fb1ba'
 ## 附上相关链接：
 + ['新闻链接'](https://thehackernews.com/2019/08/ctfmon-windows-vulnerabilities.html)
 + ['利用工具链接'](https://github.com/taviso/ctftool)
+
+
+## 后续补上测试过程
