--- a/_posts/2019-08-14-Windows提权大杀器.md
+++ b/_posts/2019-08-14-Windows提权大杀器.md
@@ -12,7 +12,16 @@ accent_color:          '#4fb1ba'
 
 ## 附上相关链接：
 + ['新闻链接'](https://thehackernews.com/2019/08/ctfmon-windows-vulnerabilities.html)
-+ ['利用工具链接'](https://github.com/taviso/ctftool)
++ ['利用工具github链接'](https://github.com/taviso/ctftool)
 
 
-## 后续补上测试过程
+## Windows 10 1903本地测试
+1. 首先从github中下载作者已经编译好的版本：https://github.com/taviso/ctftool/releases
+2. 打开运行可能会出现如图所示的错误，此处安装Visual C ++ Redistributable for Visual Studio即可解决，["下载链接"](https://www.microsoft.com/en-us/download/details.aspx?id=48145),建议x86和x64都安装
+  ![Full-width image](/assets/img/docs/ctftoolPrivilegeUpgrading/1.png)
+3. 查询当前账户权限
+  ![Full-width image](/assets/img/docs/ctftoolPrivilegeUpgrading/2.png)
+4. 运行ctftool.exe  执行命令script .\scripts\ctf-consent-system.ctf
+  ![Full-width image](/assets/img/docs/ctftoolPrivilegeUpgrading/3.png)
+5. 执行后任何操作都不要做，等待弹出一个cmd即可，再次进行查询已是system权限
+  ![Full-width image](/assets/img/docs/ctftoolPrivilegeUpgrading/4.png)
