--- a/_posts/2019-08-14-Windows提权大杀器.md
+++ b/_posts/2019-08-14-Windows提权大杀器.md
@@ -16,7 +16,7 @@ accent_color:          '#4fb1ba'
 
 
 ## Windows 10 1903本地测试
-1. 首先从github中下载作者已经编译好的版本：https://github.com/taviso/ctftool/releases
+1. 首先从github中下载作者已经编译好的版本：['点击此处'](https://github.com/taviso/ctftool/releases)
 2. 打开运行可能会出现如图所示的错误，此处安装Visual C ++ Redistributable for Visual Studio即可解决，["下载链接"](https://www.microsoft.com/en-us/download/details.aspx?id=48145),建议x86和x64都安装
   ![Full-width image](/assets/img/docs/ctftoolPrivilegeUpgrading/1.png)
 3. 查询当前账户权限
