--- a/_posts/2019-08-07-tools(持续更新).md
+++ b/_posts/2019-08-07-tools(持续更新).md
@@ -12,11 +12,11 @@ accent_color:          '#4fb1ba'
 
 ### 系统运维类
 
-#### LGPO
+1. LGPO
 + 文档：https://blogs.technet.microsoft.com/secguide/2016/01/21/lgpo-exe-local-group-policy-object-utility-v1-0/
 + 链接：https://www.microsoft.com/en-us/download/details.aspx?id=55319
 + 简述：通过该工具可实现对本地安全策略的批量调整，可导出电脑的本地安全策略，然后再导入到其他需要配置本地安全策略的电脑。在基线加固中可能能用到。
-#### logparser2.2
+2. logparser2.2
 + 链接：https://www.microsoft.com/en-us/download/details.aspx?id=24659
 + 简述：微软提供的用来对多种日志文件进行分析的工具，例如windows事件、iis日志等多种日志，通过使用sql语句进行查询，也可到将结果导出为各种格式，还具有进行绘制图表等、统计等功能。但为命令行版本
 
