--- a/_posts/2019-08-07-tools(持续更新).md
+++ b/_posts/2019-08-07-tools(持续更新).md
@@ -22,9 +22,9 @@ accent_color:          '#4fb1ba'
 
 ### 网站类
 
-#### CTF在线工具
+1. CTF在线工具
 + 链接：http://ctf.ssleye.com/
 + 简述：该网站提供了多种加密、编码的在线编解码、加解密的功能。主要涉及到CTF的编码、算法、和杂项类
-#### 奶牛快传
+2. 奶牛快传
 + 链接：https://cowtransfer.com/
 + 简述：一个提供文件临时分享的网站，可在无U盘的情况下传输某些临时不机密文件(功能类似于临时网盘，优点为无需客户端，浏览器打开即可)。最大4G，保留72小时。
