--- a/_posts/2019-08-14-Windows提权大杀器.md
+++ b/_posts/2019-08-14-Windows提权大杀器.md
@@ -8,15 +8,15 @@ author: author1
 accent_image:          /assets/img/sidebar-bg.jpg
 accent_color:          '#4fb1ba'
 ---
-# 影响所有windows版本的漏洞-可用来提权
+### 影响所有windows版本的漏洞-可用来提权
 
 
-## 附上相关链接：
+#### 附上相关链接：
 + ['新闻链接'](https://thehackernews.com/2019/08/ctfmon-windows-vulnerabilities.html)
 + ['利用工具github链接'](https://github.com/taviso/ctftool)
 
 
-## Windows 10 1903本地测试
+#### Windows 10 1903本地测试
 1. 首先从github中下载作者已经编译好的版本：['点击此处'](https://github.com/taviso/ctftool/releases)
 2. 打开运行可能会出现如图所示的错误，此处安装Visual C ++ Redistributable for Visual Studio即可解决，["下载链接"](https://www.microsoft.com/en-us/download/details.aspx?id=48145),建议x86和x64都安装
   ![Full-width image](/assets/img/docs/ctftoolPrivilegeUpgrading/1.png)
