--- a/_posts/2019-08-07-Pwnable-01-fd.md
+++ b/_posts/2019-08-07-Pwnable-01-fd.md
@@ -2,13 +2,13 @@
 layout: post
 title: Pwnable-01-fd
 description: >
-  这是pwnable的第一题fd的解析过程
+  这是pwnable的第一题fd的解析过程,其中涉及到思路分析
 tags: [技术]
 author: author1
 accent_image:          /assets/img/sidebar-bg.jpg
 accent_color:          '#4fb1ba'
 ---
-### pwnable的第一题fd
+#### pwnable介绍
 
   ['pwnable.kr'](https://pwnable.kr/index.php)is a non-commercial wargame site which provides various pwn challenges regarding system exploitation. the main purpose of pwnable.kr is 'fun'.    please consider each of the challenges as a game. while playing pwnable.kr, you could learn/improve system hacking skills but that shouldn't be your only purpose.
 #### 源代码：
