--- a/_posts/2019-08-07-tools(持续更新).md
+++ b/_posts/2019-08-07-tools(持续更新).md
@@ -4,7 +4,7 @@ title: 此贴为工具帖，持续更新
 description: >
   此贴为工具帖，主要留一些日常用到的小工具，一般包含的内容为下载链接、基本说明、不附使用说明(易导致文本臃肿)
 tags: [杂货铺]
-author: author1
+author: DshSec
 accent_image:          /assets/img/sidebar-bg.jpg
 accent_color:          '#4fb1ba'
 ---
