--- a/_posts/2019-08-14-Windows提权大杀器.md
+++ b/_posts/2019-08-14-Windows提权大杀器.md
@@ -4,7 +4,7 @@ title: 影响所有windows版本的漏洞-可用来提权
 description: >
   Google安全研究人员披露了一个影响所有Microsoft Windows版本的20年未修补的高危漏洞的详细信息，从Windows XP到最新的Windows 10
 tags: [杂货铺]
-author: author1
+author: DshSec
 accent_image:          /assets/img/sidebar-bg.jpg
 accent_color:          '#4fb1ba'
 ---
