--- a/_posts/2019-08-07-Pwnable-01-fd.md
+++ b/_posts/2019-08-07-Pwnable-01-fd.md
@@ -2,10 +2,9 @@
 date: 2019-08-07
 image: /assets/images/markdown.jpg
 headerImage: false
-#tag:
-#- markdown
-#- components
-#- extra
+tag:
+- Pwn
+- pwnable
 blog: true
 category: blog
 layout: post
