--- a/_posts/2019-08-14-Windows提权大杀器.md
+++ b/_posts/2019-08-14-Windows提权大杀器.md
@@ -5,6 +5,9 @@ description: >
   Google安全研究人员披露了一个影响所有Microsoft Windows版本的20年未修补的高危漏洞的详细信息，从Windows XP到最新的Windows 10
 blog: true
 author: DshSec
+tag:
+- Windows
+- 权限提升
 accent_image:          /assets/img/sidebar-bg.jpg
 accent_color:          '#4fb1ba'
 category: blog
