--- a/_posts/2019-08-14-Windows提权大杀器.markdown
+++ b/_posts/2019-08-14-Windows提权大杀器.markdown
@@ -14,11 +14,11 @@ category: blog
 ---
 
 #### 附上相关链接：
-+ ['新闻链接'](https://thehackernews.com/2019/08/ctfmon-windows-vulnerabilities.html)
-+ ['利用工具github链接'](https://github.com/taviso/ctftool)
++ [新闻链接](https://thehackernews.com/2019/08/ctfmon-windows-vulnerabilities.html)
++ [利用工具github链接](https://github.com/taviso/ctftool)
 
 #### Windows 10 1903本地测试
-1. 首先从github中下载作者已经编译好的版本：['点击此处'](https://github.com/taviso/ctftool/releases)
+1. 首先从github中下载作者已经编译好的版本：[点击此处](https://github.com/taviso/ctftool/releases)
 2. 打开运行可能会出现如图所示的错误，此处安装Visual C ++ Redistributable for Visual Studio即可解决，["下载链接"](https://www.microsoft.com/en-us/download/details.aspx?id=48145),建议x86和x64都安装
   ![Full-width image](/assets/img/docs/ctftoolPrivilegeUpgrading/1.png)
 3. 查询当前账户权限
